--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,7 @@ open = "5.1.4"
 oauth2 = "4.4.2"
 reqwest = { version = "^0.12", features = ["json", "multipart"] }
 chrono = "0.4.38"
+dotenvy_macro = "0.15.7"
+
+[build-dependencies]
+dotenvy = "0.15.7"
