--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -35,6 +35,11 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Build
+      env:
+        AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
+        AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+        AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
+        BINARITE_URL: ${{ secrets.BINARITE_URL }}
       run: cargo build --release
 
     - name: Upload
