--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "binarite-cli"
+default-run = "binarite-cli"
 version = "0.1.0"
 edition = "2021"
 
@@ -21,6 +22,7 @@ oauth2 = "4.4.2"
 reqwest = { version = "^0.12", features = ["json", "multipart"] }
 chrono = "0.4.38"
 dotenvy_macro = "0.15.7"
+clap-markdown = "0.1.4"
 
 [build-dependencies]
 dotenvy = "0.15.7"
